[tool.poetry]
name = "gagometro"
version = "0.1.0"
description = ""
authors = ["Nicolas Kasevich <n.kasevich@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = "^0.27.1"
sqlalchemy = "^2.0.27"
starlette-admin = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
